elements and comments

--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>JSON validate local storage</title>
   </head>
-  <body></body>
+  <body>
+    Enter JSON to validate:
+    <!-- textarea -->
+    <textarea id="jsonInput" rows="10" cols="50"></textarea>
+
+    <!-- button to validate -->
+    <button>Validate JSON</button>
+    <!-- display the message -->
+    <span id="messageDisplay"></span>
+  </body>
 </html>
