linebreaks added between elements

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>JSON validate local storage</title>
   </head>
   <body>
-    Enter JSON to validate:
+    Enter JSON to validate:<br />
     <!-- textarea -->
     <textarea id="jsonInput" rows="10" cols="50"></textarea>
 
     <!-- button to validate -->
-    <button>Validate JSON</button>
+    <br /><button>Validate JSON</button>
     <!-- display the message -->
     <span id="messageDisplay"></span>
   </body>
