retriving local storage

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
           // display previous user input in the textarea
           if (jsonText != null) {
+            var jsonTextarea = (document.getElementById("jsonInput").value =
+              jsonText);
           }
         }
       }
