--- a/index.html
+++ b/index.html
@@ -5,59 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JSON validate local storage</title>
     <!-- document script -->
-    <script>
-      // return true if local storage supported
-      // otherwise return false
-      function storageSUpported() {
-        if (typeof Storage !== "undefined") {
-          // local storage is supported
-          return true;
-        } else {
-          // local storage is NOT supported
-          return false;
-        }
-      }
-
-      function validateJson() {
-        // get the json text from the textarea
-        var jsonTextareaText = document.getElementById("jsonInput").value;
-
-        // save user input into local storage
-        if (storageSUpported()) {
-          localStorage.setItem("userInput", jsonTextareaText);
-        }
-
-        // get message span
-        var messageSpan = document.getElementById("messageDisplay");
-
-        // parse the json text
-        // try catch displaying msg on span
-        try {
-          JSON.parse(jsonTextareaText);
-          messageSpan.innerHTML =
-            "<span style='color:green;'>JSON is valid</span>";
-        } catch (ex) {
-          var message = "Error: " + ex.message;
-          messageSpan.innerHTML =
-            "<span style='color:red'>" + message + "</span>";
-        }
-      }
-
-      // retrieve user input from local storage
-      //   and display it in the text area
-      function initApp() {
-        if (storageSUpported()) {
-          //  retrieve previous user input from local storage
-          var jsonText = localStorage.getItem("userInput");
-
-          // display previous user input in the textarea
-          if (jsonText != null) {
-            var jsonTextarea = (document.getElementById("jsonInput").value =
-              jsonText);
-          }
-        }
-      }
-    </script>
+    <script src="./index.js"></script>
   </head>
 
   <!-- whenever page loads initApp() function will run -->
